# kasperskyProj

./: .gitignore  README.md
Client/: CMakeLists.txt  Client.cpp  Client.hpp  Socket.cpp  Socket.hpp  main.cpp
ProcessServer/: CMakeLists.txt  ProcessServer.cpp  ProcessServer.hpp  Server.hpp  main.cpp
Shared/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.hpp  Server.cpp  Server.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  SocketShared.cpp  SocketShared.hpp
Socket/: CMakeLists.txt  Socket.cpp  Socket.hpp
VisualServer/: CMakeLists.txt  VisualServer.cpp  VisualServer.hpp  main.cpp
